--- a/ClientApp/mainmenu.html
+++ b/ClientApp/mainmenu.html
@@ -40,7 +40,7 @@
                 style="width: 81%; position: absolute; top: 100px; left: 19%; display: flex; justify-content:center;">
                 <div class="card botonPractica" style="background-color: #C3F1FF; width: 43%;">
                     <a href="practicemode.html" class="fill-div" style="display: flex; justify-content: center;">
-                        <h1 style="top: 80%; left: 18%;">¡Practica las palabras que has aprendido!</h1>
+                        <h1 style="top: 80%; left: 18%;">¡Práctica!</h1>
                         <img src="./resources/Mapa aventura.png" alt="img"
                             style="margin-bottom: 29%; margin-left: 3%; margin-right: 3%; height: 63%; margin-top: 4%;">
                     </a>
@@ -49,7 +49,7 @@
                 <div class="container-fluid" style="display: flex; flex-direction: column;">
                     <div class="card p-3 botonEstudio" style="background-color: #C3F1FF; height: 77%; width: 43%;">
                         <a href="studymode.html" class="fill-div" style="display: flex; justify-content: center;">
-                            <h1 style="top: 77%; left: 19%;">Aprende nuevas palabras en inglés</h1>
+                            <h1 style="top: 77%; left: 19%;">Estudia</h1>
                             <img src="./resources/estudio.png" alt="img"
                                 style="margin-bottom: 29%; margin-top: 1%; width: 100%;">
                         </a>
