--- a/ClientApp/studyanimals.html
+++ b/ClientApp/studyanimals.html
@@ -22,29 +22,36 @@
         </div>
     </nav>
 
-    <h1>¡Aprende los animales en ingl&eacute;s!</h1>
-    <h4>Pasa el cursor por los animales para ver sus nombres.</h4>
-    <div id="Animals" class="mx-auto d-block container-fluid">
-        <div class="row">
-            <div id="dog" class="card">
-                <img src="./resources/animals/dog.png" />
-                <h3 class="hover-text">Perro<br />Dog<br /></h3>
-            </div>
-            <div id="shark" class="card">
-                <img src="./resources/animals/shark.png" />
-                <h3 class="hover-text card-text">Tiburón<br />Shark<br /></h3>
-            </div>
-            <div id="lion" class="card">
-                <img src="./resources/animals/lion.png" />
-                <h3 class="hover-text card-text">León<br />Lion<br /></h3>
-            </div>
-            <div id="sheep" class="card">
-                <img src="./resources/animals/sheep.png" />
-                <h3 class="hover-text card-text">Oveja<br />Sheep<br /></h3>
-            </div>
-            <div id="elephant" class="card">
-                <img src="./resources/animals/elephant.png" />
-                <h3 class="hover-text card-text">Elefante<br />Elephant<br /></h3>
+    <div id="pamostraranimals" class="card mx-auto justify-content-center align-items-center" style="display: flex; justify-content:center;">
+        <button class="paramostraranimals" onclick="mostrarContenido()">¡Vamos a aprender! <br> Pulsa aquí para empezar </button>
+    </div>
+
+    <div id="contenidoanimals" style="display:none;">
+        <h1>¡Aprende los animales en ingl&eacute;s!</h1>
+        <h4>Pasa el cursor por los animales para ver sus nombres.</h4>
+        <div id="Animals" class="mx-auto d-block container-fluid">
+            <div class="row">
+                <div id="dog" class="card">
+                    <img src="./resources/animals/dog.png" />
+                    <h3 class="hover-text" id="doggy">Perro<br />Dog<br /></h3>
+                    <audio id="audio" class="SoundOnHover" src="https://css-tricks.com/examples/SoundOnHover/audio/beep.mp3" preload="auto" autoplay></audio>
+                </div>
+                <div id="shark" class="card">
+                    <img src="./resources/animals/shark.png"/>
+                    <h3 class="hover-text card-text" id="sharky">Tiburón<br />Shark<br /></h3>
+                </div>
+                <div id="lion" class="card">
+                    <img src="./resources/animals/lion.png" />
+                    <h3 class="hover-text card-text" id="leoncito">León<br />Lion<br /></h3>
+                </div>
+                <div id="sheep" class="card">
+                    <img src="./resources/animals/sheep.png" />
+                    <h3 class="hover-text card-text" id="beeee">Oveja<br />Sheep<br /></h3>
+                </div>
+                <div id="elephant" class="card">
+                    <img src="./resources/animals/elephant.png" />
+                    <h3 class="hover-text card-text" id="elefantillo">Elefante<br />Elephant<br /></h3>
+                </div>
             </div>
         </div>
     </div>
@@ -52,6 +59,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
+    <script src="js/animalStudy.js"></script>
 </body>
-
 </html>
