--- a/ClientApp/studycolors.html
+++ b/ClientApp/studycolors.html
@@ -22,30 +22,36 @@
         </div>
     </nav>
 
-    <h1>¡Aprende los colores en inglés!</h1>
-    <h4>Pasa el cursor por los colores para verlos.</h4>
-    <div id="PaletaDiv" class="mx-auto d-block">
-        <div class="green">
-            <h3 class="hover-text">Verde<br />Green<br /></h3>
-        </div>
-        <div class="red">
-            <h3 class="hover-text">Rojo<br />Red<br /></h3>
-        </div>
-        <div class="blue">
-            <h3 class="hover-text">Azul<br />Blue<br /></h3>
-        </div>
-        <div class="yellow">
-            <h3 class="hover-text">Amarillo<br />Yellow<br /></h3>
-        </div>
-        <div class="white">
-            <h3 class="hover-text">Blanco<br />White<br /></h3>
-        </div>
+    <div id="pamostrarcolors" class="card mx-auto justify-content-center align-items-center" style="display: flex; justify-content:center;">
+        <button class="paramostrarcolors" onclick="mostrarContenidoColor()">¡Vamos a aprender! <br> Pulsa aquí para empezar </button>
     </div>
 
-    <button id="changeColorsButton" class="mx-auto d-block">
-        <label>¡M&aacute;s colores!</label>
-    </button>
+    <div id="contenidocolors" style="display:none;">
+        <h1>¡Aprende los colores en inglés!</h1>
+        <h4>Pasa el cursor por los colores para verlos.</h4>
+        <div id="PaletaDiv" class="mx-auto d-block">
+            <div class="green">
+                <h3 class="hover-text">Verde<br />Green<br /></h3>
+                <audio src="SnapSave.io - 지민 (Jimin) 'Set Me Free Pt.2' Official MV (128 kbps).mp3"></audio>
+            </div>
+            <div class="red">
+                <h3 class="hover-text">Rojo<br />Red<br /></h3>
+            </div>
+            <div class="blue">
+                <h3 class="hover-text">Azul<br />Blue<br /></h3>
+            </div>
+            <div class="yellow">
+                <h3 class="hover-text">Amarillo<br />Yellow<br /></h3>
+            </div>
+            <div class="white">
+                <h3 class="hover-text">Blanco<br />White<br /></h3>
+            </div>
+        </div>
 
+        <button id="changeColorsButton" class="mx-auto d-block">
+            <label>¡M&aacute;s colores!</label>
+        </button>
+    </div>
 
     <script src="js/colorStudy.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
