--- a/ClientApp/studynumbers.html
+++ b/ClientApp/studynumbers.html
@@ -22,37 +22,44 @@
         </div>
     </nav>
 
-    <h1>¡Aprende los n&uacute;meros en ingl&eacute;s!</h1>
-    <h4>Pasa el cursor por los n&uacute;meros para ver sus nombres.</h4>
-    <div id="Numbers" class="mx-auto d-block container-fluid">
-        <div class="row">
-            <div id="n1" class="card">
-                <img src="./resources/numbers/1.png" />
-                <h3 class="hover-text">Uno<br />One<br /></h3>
-            </div>
-            <div id="n2" class="card">
-                <img src="./resources/numbers/2.png" />
-                <h3 class="hover-text card-text">Dos<br />Two<br /></h3>
-            </div>
-            <div id="n3" class="card">
-                <img src="./resources/numbers/3.png" />
-                <h3 class="hover-text card-text">Tres<br />Three<br /></h3>
-            </div>
-            <div id="n4" class="card">
-                <img src="./resources/numbers/4.png" />
-                <h3 class="hover-text card-text">Cuatro<br />Four<br /></h3>
-            </div>
-            <div id="n5" class="card">
-                <img src="./resources/numbers/5.png" />
-                <h3 class="hover-text card-text">Cinco<br />Five<br /></h3>
-            </div>
-            <div id="n6" class="card">
-                <img src="./resources/numbers/6.png" />
-                <h3 class="hover-text card-text">Seis<br />Six<br /></h3>
-            </div>
-            <div id="n10" class="card">
-                <img src="./resources/numbers/10.png" />
-                <h3 class="hover-text card-text">Diez<br />Ten<br /></h3>
+    <div id="pamostrarnumber" class="card mx-auto justify-content-center align-items-center" style="display: flex; justify-content:center;">
+        <button class="paramostrarnumber" onclick="mostrarContenido()">¡Vamos a aprender! <br> Pulsa aquí para empezar </button>
+    </div>
+
+    <div id="contenidonumber" style="display:none;">
+        <audio id="audio" class="SoundOnHover" src="https://css-tricks.com/examples/SoundOnHover/audio/beep.mp3" preload="auto" autoplay></audio>
+        <h1>¡Aprende los n&uacute;meros en ingl&eacute;s!</h1>
+        <h4>Pasa el cursor por los n&uacute;meros para ver sus nombres.</h4>
+        <div id="Numbers" class="mx-auto d-block container-fluid">
+            <div class="row">
+                <div id="n1" class="card">
+                    <img src="./resources/numbers/1.png" />
+                    <h3 class="hover-text">Uno<br />One<br /></h3>
+                </div>
+                <div id="n2" class="card">
+                    <img src="./resources/numbers/2.png" />
+                    <h3 class="hover-text card-text">Dos<br />Two<br /></h3>
+                </div>
+                <div id="n3" class="card">
+                    <img src="./resources/numbers/3.png" />
+                    <h3 class="hover-text card-text">Tres<br />Three<br /></h3>
+                </div>
+                <div id="n4" class="card">
+                    <img src="./resources/numbers/4.png" />
+                    <h3 class="hover-text card-text">Cuatro<br />Four<br /></h3>
+                </div>
+                <div id="n5" class="card">
+                    <img src="./resources/numbers/5.png" />
+                    <h3 class="hover-text card-text" id="cinco">Cinco<br />Five<br /></h3>
+                </div>
+                <div id="n6" class="card">
+                    <img src="./resources/numbers/6.png" />
+                    <h3 class="hover-text card-text">Seis<br />Six<br /></h3>
+                </div>
+                <div id="n10" class="card">
+                    <img src="./resources/numbers/10.png" />
+                    <h3 class="hover-text card-text">Diez<br />Ten<br /></h3>
+                </div>
             </div>
         </div>
     </div>
@@ -60,6 +67,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
+    <script src="js/numberStudy.js"></script>
 </body>
 
 </html>
