--- a/ClientApp/practicemode.html
+++ b/ClientApp/practicemode.html
@@ -8,8 +8,8 @@
         @import url("./styles/commonStyles.css");
         @import url("./styles/practicemodeStyles.css");
     </style>
-    <link rel="icon" type="image/x-icon" href="resources/favicon.ico">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    <link rel="icon" type="image/x-icon" href="resources/favicon.ico" lang="en">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" lang="en"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
@@ -17,8 +17,8 @@
   <div class="mb-3">
     <nav class="navbar navbar-custom py-3 fixed-top shadow-sm">
       <div class="container-fluid">
-          <a href="mainmenu.html" alt="Barra de regreso para volver al menú">
-              <button style="background: transparent; outline: none; border: 0; width: 60px;"type="button" aria-label="Boton atras"><img src="./resources/arrow.png" alt="Imagen de una flecha de retroceso" style="width: 100%;"></button>
+          <a href="mainmenu.html" alt="Barra de regreso para volver al menú" lang="en">
+              <button style="background: transparent; outline: none; border: 0; width: 60px;"type="button" aria-label="Boton atras"><img src="./resources/arrow.png" alt="Imagen de una flecha de retroceso" style="width: 100%;" lang="en"></button>
           </a>
       </div>
     </nav>
@@ -41,7 +41,7 @@
       <div class="row pt-2">
         <div class="col col-custom"> 
           <div>
-            <button class="btn-custom botones buttonColores" aria-label="Botón colores" alt="Botón tema colores" onclick="window.location.href = 'practiceactivity.html';">
+            <button class="btn-custom botones buttonColores" lang="en" aria-label="Botón colores" alt="Botón tema colores" onclick="window.location.href = 'practiceactivity.html';">
               <svg class="svgColores svgBoton" lang="en"></svg>              
             </button>
           </div>
@@ -57,7 +57,7 @@
         </div>
         <div class="col col-custom">
           <div>
-            <button class="btn-custom botones buttonAnimales" aria-label="Botón tema animales" alt="Botón tema animales" onclick="window.location.href = 'practiceactivity2.html';">
+            <button class="btn-custom botones buttonAnimales" lang="en" aria-label="Botón tema animales" alt="Botón tema animales" onclick="window.location.href = 'practiceactivity2.html';">
               <svg class="svgAnimales svgBoton" lang="en"></svg>              
             </button>
           </div>
@@ -67,7 +67,7 @@
       <div class="row mt-n1">
         <div class="col col-custom"> 
           <div>
-            <button class="btn-custom botones buttonNumeros" aria-label="Botón tema números" alt="Botón tema números" onclick="window.location.href = 'practiceactivity3.html';">
+            <button class="btn-custom botones buttonNumeros" lang="en" aria-label="Botón tema números" alt="Botón tema números" onclick="window.location.href = 'practiceactivity3.html';">
               <svg class="svgNumeros svgBoton" lang="en"></svg>              
             </button>
           </div>
