--- a/ClientApp/studymode.html
+++ b/ClientApp/studymode.html
@@ -3,11 +3,11 @@
 
 
 <head>
-    <title>MIAU</title>
+    <title>Modo estudio - MIAU</title>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         @import url("styles/studyMode.css");
-        @import url("styles/commonStyles.css");
     </style>
     <link rel="icon" type="image/x-icon" href="resources/favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -19,59 +19,63 @@
         <div class="col-1">
             <button style="background: transparent; outline: none; border: 0; width: 60px;" class="btn btn-primary"
                 onclick="window.location.href = 'mainmenu.html';">
-                <img src="resources/arrow.png" alt="ReturnArrow" style="width:40px" />
+                <img src="resources/arrow.png" alt="Flecha de retroceso"
+                    longdesc="Pulsa aquí para volver al menú principal." style="width:40px" />
             </button>
         </div>
     </nav>
 
-    <div class="container" style="padding-top: 80px">
-        <br>
+    <div id="main-cont" class="container">
+        <h1>Modo estudio</h1>
 
         <div id="button-cont" class="float-left">
-            <div class="botonCol">
-                <button class="btn btn-primary btn-lg" onclick="window.location.href = 'studycolors.html';">
+            <div class="botonCol container-sm">
+                <button class="btn btn-primary btn-lg " onclick="window.location.href = 'studycolors.html';">
                     <img src="resources/botonColores.png" alt="Colores" class="mr-3" width="100">
-                    Colores - Colors
-
+                    <b>Colores</b> - <b lang="en">Colors</b>
                 </button>
             </div>
 
             <br>
 
-            <div class="botonAni">
+            <div class="botonAni container-sm">
                 <button class="btn btn-primary btn-lg" onclick="window.location.href = 'studyanimals.html';">
                     <img src="resources/botonAnimales.png" alt="Animales" class="mr-3" width="100">
-                    Animales - Animals
+                    <b>Animales</b> - <b lang="en">Animals</b>
                 </button>
             </div>
 
             <br>
 
-            <div class="botonNum">
+            <div class="botonNum container-sm">
                 <button class="btn btn-primary btn-lg" onclick="window.location.href = 'studynumbers.html';">
                     <img src="resources/botonNumeros.png" alt="Numeros" class="mr-3" width="100">
-                    N&uacute;meros - Numbers
+                    <b>N&uacute;meros</b> - <b lang="en">Numbers</b>
                 </button>
             </div>
 
         </div>
 
-        <div class="float-right">
-            <img>
+        <div id="padder" class="d-block d-lg-none">
         </div>
-
+    </div>
+    <div id="Umberto-con-texto">
+        <div class="bubble der">
+            <img src="./resources/bubbles/bubbleStudyColores.png" id="bubbleColoresStudy" style="display:none"
+                alt="¡Aprendamos los colores!">
+            <img src="./resources/bubbles/bubbleStudyAnimales.png" id="bubbleAnimalesStudy" style="display:none"
+                alt="¡Vamos a estudiar los animales! ¡Meow!">
+            <img src="./resources/bubbles/bubbleStudyNumeros.png" id="bubbleNumerosStudy" style="display:none"
+                alt="¡Aprendamos los números! ¡Meow!">
+            <img src="./resources/bubbles/bubbleBienvenidaStudyMode.png" id="bubbleWelcomeStudy" style="display:block"
+                alt="¡Vamos a aprender juntos/as! ¡Meow!">
+        </div>
+        <div class="gatito">
+            <img src="./resources/solo-gatito.png" id="gatete" alt="Umberto" longdesc="Nuestro gato, Umberto.">
+        </div>
     </div>
 
-    <div class="gatito">
-        <img src="./resources/solo-gatito.png" id="gatete">
-    </div>
 
-    <div class="bubble der">
-        <img src="./resources/bubbles/bubbleStudyColores.png" id="bubbleColoresStudy" style="display:none">
-        <img src="./resources/bubbles/bubbleStudyAnimales.png" id="bubbleAnimalesStudy" style="display:none">
-        <img src="./resources/bubbles/bubbleStudyNumeros.png" id="bubbleNumerosStudy" style="display:none">
-        <img src="./resources/bubbles/bubbleBienvenidaStudyMode.png" id="bubbleWelcomeStudy" style="display:block">
-    </div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
