--- a/ClientApp/studynumbers.html
+++ b/ClientApp/studynumbers.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Estudiar números - MIAU</title>
     <style type="text/css">
         @import url("./styles/studyActivities/studyNumbers.css");
