--- a/ClientApp/studynumbers.html
+++ b/ClientApp/studynumbers.html
@@ -32,7 +32,7 @@
 
     <div id="contenidonumber" style="display:none;" tabindex="0">
         <audio id="audio" class="SoundOnHover" src="https://css-tricks.com/examples/SoundOnHover/audio/beep.mp3"
-            preload="auto" autoplay></audio>
+            preload="none" muted></audio>
         <h1>¡Aprende los n&uacute;meros en ingl&eacute;s!</h1>
         <h2>Pasa el cursor por los n&uacute;meros para ver y escuchar sus nombres.</h2>
         <div id="Numbers" class="mx-auto d-block container-fluid">
@@ -42,56 +42,56 @@
                     <p class="hover-text" aria-hidden="true">Uno<br />
                         <i lang="en">One</i><br />
                     </p>
-                    <audio id="audiouno" class="SoundOnHover" src="resources/sounds/uno one.aac" preload="auto"
-                        autoplay></audio>
+                    <audio id="audiouno" class="SoundOnHover" src="resources/sounds/uno one.aac" preload="none"
+                        muted></audio>
                 </div>
                 <div id="n2" class="card" tabindex="0">
                     <img src="./resources/numbers/2.png" alt="Número 2" />
                     <p class="hover-text card-text" aria-hidden="true">Dos<br />
                         <i lang="en">Two</i><br />
                     </p>
-                    <audio id="audiodos" class="SoundOnHover" src="resources/sounds/dos two.aac" preload="auto"
-                        autoplay></audio>
+                    <audio id="audiodos" class="SoundOnHover" src="resources/sounds/dos two.aac" preload="none"
+                        muted></audio>
                 </div>
                 <div id="n3" class="card" tabindex="0">
                     <img src="./resources/numbers/3.png" alt="Número 3" />
                     <p class="hover-text card-text" aria-hidden="true">Tres<br />
                         <i lang="en">Three</i><br />
                     </p>
-                    <audio id="audiotres" class="SoundOnHover" src="resources/sounds/tres three.aac" preload="auto"
-                        autoplay></audio>
+                    <audio id="audiotres" class="SoundOnHover" src="resources/sounds/tres three.aac" preload="none"
+                        muted></audio>
                 </div>
                 <div id="n4" class="card" tabindex="0">
                     <img src="./resources/numbers/4.png" alt="Número 4" />
                     <p class="hover-text card-text" aria-hidden="true">Cuatro<br />
                         <i lang="en">Four</i><br />
                     </p>
-                    <audio id="audiocuatro" class="SoundOnHover" src="resources/sounds/cuatro four.aac" preload="auto"
-                        autoplay></audio>
+                    <audio id="audiocuatro" class="SoundOnHover" src="resources/sounds/cuatro four.aac" preload="none"
+                        muted></audio>
                 </div>
                 <div id="n5" class="card" tabindex="0">
                     <img src="./resources/numbers/5.png" alt="Número 5" />
                     <p class="hover-text card-text" aria-hidden="true">Cinco<br />
                         <i lang="en">Five</i><br />
                     </p>
-                    <audio id="audiocinco" class="SoundOnHover" src="resources/sounds/cinco five.aac" preload="auto"
-                        autoplay></audio>
+                    <audio id="audiocinco" class="SoundOnHover" src="resources/sounds/cinco five.aac" preload="none"
+                        muted></audio>
                 </div>
                 <div id="n6" class="card" tabindex="0">
                     <img src="./resources/numbers/6.png" alt="Número 6" />
                     <p class="hover-text card-text" aria-hidden="true">Seis<br />
                         <i lang="en">Six</i><br />
                     </p>
-                    <audio id="audioseis" class="SoundOnHover" src="resources/sounds/seis six.aac" preload="auto"
-                        autoplay></audio>
+                    <audio id="audioseis" class="SoundOnHover" src="resources/sounds/seis six.aac" preload="none"
+                        muted></audio>
                 </div>
                 <div id="n10" class="card" tabindex="0">
                     <img src="./resources/numbers/10.png" alt="Número 10" />
                     <p class="hover-text card-text" aria-hidden="true">Diez<br />
                         <i lang="en">Ten</i><br />
                     </p>
-                    <audio id="audiodiez" class="SoundOnHover" src="resources/sounds/diez ten.aac" preload="auto"
-                        autoplay></audio>
+                    <audio id="audiodiez" class="SoundOnHover" src="resources/sounds/diez ten.aac" preload="none"
+                        muted></audio>
                 </div>
             </div>
         </div>
