--- a/ClientApp/mainmenu.html
+++ b/ClientApp/mainmenu.html
@@ -13,7 +13,7 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
-<body style="overflow: hidden;">
+<body>
     <nav class="navbar navbar-custom py-3 fixed-top shadow-sm">
         <div class="col-1">
             <button class="btn btn-primary" id="back" onclick="window.location.href = 'index.html';">
