--- a/ClientApp/mainmenu.html
+++ b/ClientApp/mainmenu.html
@@ -39,7 +39,7 @@
                 id="bubbleTienda" aria-label="¡Personaliza a nuestro gato, Umberto!" style="display:none">
         </div>
         <div class="bg-image container-fluid" id="background"
-            style="background-image: url('./resources/Background.png'); height: 100vh;">
+            style="background-image: url('./resources/Background.png');">
             <div class="container-fluid" id="wrapperMapa">
                 <div class="card botonPractica" id="practica">
                     <img src="./resources/Mapa aventura.png" alt="img" id="imgPractica">
