--- a/ClientApp/customizeUmberto.html
+++ b/ClientApp/customizeUmberto.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>MIAU</title>
+    <title>MIAU-Customiza a Umberto</title>
     <style>
         @import url("./styles/Umberto.css");
     </style>
